- change dirType to folder - update swag
