# docs/swagger.json
@@ -33,6 +33,13 @@
                     },
                     {
                         "type": "string",
+                        "default": "videoclips",
+                        "name": "folder",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "default": "/mnt/streamstudio",
                         "name": "mountPath",
                         "in": "formData",
@@ -48,13 +55,6 @@
                         "default": "mp4",
                         "name": "outputFormat",
                         "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "default": "files-encoded",
-                        "name": "type",
-                        "in": "formData",
-                        "required": true
                     },
                     {
                         "type": "file",
@@ -90,6 +90,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "default": "videoclips",
+                        "name": "folder",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "default": "/mnt/streamstudio",
                         "name": "mountPath",
                         "in": "formData",
@@ -99,13 +106,6 @@
                         "type": "string",
                         "name": "name",
                         "in": "formData"
-                    },
-                    {
-                        "type": "string",
-                        "default": "files",
-                        "name": "type",
-                        "in": "formData",
-                        "required": true
                     },
                     {
                         "type": "file",
